Fix collapsed menu to display items horizontally

--- a/my-app/src/app/style.css
+++ b/my-app/src/app/style.css
@@ -12,6 +12,10 @@ body {
   color: #0d6efd !important;
 }
 
+.navbar-collapse .navbar-nav {
+  flex-direction: row !important;
+}
+
 #topMenu, #bottomMenu {
   background-color: #1B4F24;
 }
